Fix scrollbars showing on bottom bar (#1833)

--- a/qt/aqt/data/web/css/reviewer-bottom.scss
+++ b/qt/aqt/data/web/css/reviewer-bottom.scss
@@ -78,10 +78,6 @@ button {
     -webkit-user-select: none;
 }
 
-#innertable {
-    padding: 3px;
-}
-
 .nightMode {
     #outer {
         border-top-color: var(--faint-border);
